# mad-icp

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  compile_commands.json  docker-compose.dev.yml  pyproject.toml
.github/workflows/: pypi_publish.yml  pythonbuild.yml  pythonbuild_devel.yml
docker/: build.sh  run-dev.sh  run-robot.sh  run.sh
mad-icp/: CMakeLists.txt  requirements.txt
mad-icp/apps/: mad-icp.py  rosbag_runner.py
mad-icp/apps/cpp_runners/: bin_runner.cpp
mad-icp/apps/cpp_runners/cpp_utils/: parse_cmd_line.h
mad-icp/apps/utils/: kitti_reader.py  ros_reader.py  utils.py  visualizer.py
mad-icp/configurations/: params.cfg
mad-icp/configurations/datasets/: newer_college_os1.cfg
mad-icp/src/: CMakeLists.txt
mad-icp/src/odometry/: CMakeLists.txt  mad_icp.cpp  mad_icp.h  pipeline.cpp  pipeline.h  vel_estimator.cpp
mad-icp/src/odometry/pybind/: eigen_stl_bindings.h  pypeline.cpp
mad-icp/src/tools/: CMakeLists.txt  constants.h  lie_algebra.h  mad_tree.h
mad_backend/: package.xml  setup.cfg  setup.py
mad_backend/mad_backend/: mad_backend_node.py  pgo_managar.py
mad_icp/: .clang-format  CMakeLists.txt  mad_icpConfig.cmake  package.xml  requirements.txt
mad_icp/apps/: build_map.py  mad_icp.py
mad_icp/apps/cpp_runners/: CMakeLists.txt  bin_runner.cpp
mad_icp/apps/utils/: kitti_reader.py  mcap_reader.py  point_cloud2.py  ros2_reader.py  ros_publisher.py  ros_reader.py  tum_reader.py  utils.py  utils_ext.py  visualizer.py
mad_icp/apps/utils/tools/: README.md  mad_registration.py  nn_search.py  tools_utils.py
mad_icp/configurations/: default.cfg  mad_params.py
mad_icp/configurations/datasets/: dataset_configurations.py  hilti_2021.cfg  jackal.cfg  kitti.cfg  mulran.cfg  newer_college_os0.cfg  newer_college_os1.cfg  vbr_os0.cfg  vbr_os1.cfg
mad_icp/configurations/rviz/: mad_icp_rviz_odom_and_cloud.rviz
mad_icp/src/: CMakeLists.txt
mad_icp/src/odometry/: CMakeLists.txt  mad_icp.cpp  mad_icp.h  pipeline.cpp  pipeline.h  vel_estimator.cpp  vel_estimator.h
mad_icp/src/pybind/: CMakeLists.txt  eigen_stl_bindings.h  pypeline.cpp  pyvector.cpp
mad_icp/src/pybind/tools/: mad_icp_wrapper.h  mad_tree_wrapper.h  pymadicp.cpp  pymadtree.cpp
mad_icp/src/tools/: CMakeLists.txt  constants.h  frame.h  lie_algebra.h  mad_tree.cpp  mad_tree.h  utils.h
mad_icp_ros/: CMakeLists.txt  package.xml
mad_icp_ros/config/: cyclonedds.xml
mad_icp_ros/config/localizer/: default.yaml
mad_icp_ros/config/mad_icp/: jackal.yaml  unitree_g1.yaml
mad_icp_ros/config/pose_graph_localizer/: default.yaml
mad_icp_ros/config/rviz/: g1_odom.rviz  localization.rviz  viz.rviz
mad_icp_ros/include/mad_icp_ros/: binary_tree_io.h  localization.h  map_server.h  odom_cbuf.h  odometry.h  odometry_old.h  pose_graph_localizer.h  pose_index.h  utils.h
mad_icp_ros/launch/: g1.launch.py  g1_localizer_with_bag.launch.py  g1_odometry_with_bag.launch.py  localization.launch.py  localizer.launch.py  odom.launch.py  pose_graph_localizer.launch.py
mad_icp_ros/src/: binary_tree_io.cpp  localization.cpp  map_server.cpp  odom_cbuf.cpp  odometry.cpp  odometry_old.cpp  pose_graph_localizer.cpp  pose_index.cpp  utils.cpp
mad_icp_ros_interfaces/: CMakeLists.txt  package.xml
mad_icp_ros_interfaces/include/mad_icp_ros_interfaces/: serialize.h
mad_icp_ros_interfaces/include/mad_icp_ros_utils/: utils.h
mad_icp_ros_interfaces/msg/: Frame.msg  MadNode.msg  MadTree.msg
mad_icp_ros_interfaces/src/: serialize.cpp  utils.cpp
scripts/: update_lazyvim.lua
